--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="w-8 h-8 bg-gradient-to-tr from-emerald-400 to-cyan-500 rounded-lg flex items-center justify-center text-black font-bold shadow-lg shadow-emerald-500/20">
                     <i class="fa-solid fa-store"></i>
                 </div>
-                <h1 class="font-bold text-lg text-white tracking-wide">Toko<span class="text-emerald-400">Online</span></h1>
+                <h1 class="font-bold text-lg text-white tracking-wide">Jamaaho<span class="text-emerald-400">Lintingiyah</span></h1>
             </div>
             <button onclick="toggleLoginModal()" class="text-xs bg-white/10 hover:bg-white/20 border border-white/10 px-3 py-1.5 rounded-full transition text-emerald-100 backdrop-blur-md">
                 <i class="fa-solid fa-user-gear mr-1"></i> Admin
