--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             let { data: products, error } = await sb
                 .from('products')
                 .select('*')
-                .order('id', { ascending: false });
+                .order('sort_order', { ascending: true });
 
             if (error) { console.error(error); return; }
             allProducts = products; 
